@@ -15,7 +15,7 @@
     {
       "name": "RAYLIB_VERSION_MINOR",
       "type": "INT",
-      "value": 1,
+      "value": 5,
       "description": ""
     },
     {
@@ -27,7 +27,7 @@
     {
       "name": "RAYLIB_VERSION",
       "type": "STRING",
-      "value": "5.1-dev",
+      "value": "5.5",
       "description": ""
     },
     {
@@ -1058,7 +1058,7 @@
         {
           "type": "Vector3",
           "name": "direction",
-          "description": "Ray direction"
+          "description": "Ray direction (normalized)"
         }
       ]
     },
@@ -7184,6 +7184,21 @@
       ]
     },
     {
+      "name": "ImageFromChannel",
+      "description": "Create an image from a selected channel of another image (GRAYSCALE)",
+      "returnType": "Image",
+      "params": [
+        {
+          "type": "Image",
+          "name": "image"
+        },
+        {
+          "type": "int",
+          "name": "selectedChannel"
+        }
+      ]
+    },
+    {
       "name": "ImageText",
       "description": "Create an image from text (default font)",
       "returnType": "Image",
@@ -10385,7 +10400,7 @@
         },
         {
           "type": "float",
-          "name": "size"
+          "name": "scale"
         },
         {
           "type": "Color",
